samples/ingress/services.yml
#nodeport svc for nginx app
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    name: nginx-pod
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30950

---
#nodeport svc for httpd app
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: NodePort
  selector:
    name: httpd-pod
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30951
