samples/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
     kubernetes.io/ingress.class: "gce"
spec:
  rules: 
    - http:
        paths:
          - path: /apache
            pathType: ImplementationSpecific
            backend: 
              service:
                name: httpd-service
                port: 
                  number: 80
          - path: /nginx
            pathType: ImplementationSpecific
            backend: 
              service:
                name: nginx-service
                port: 
                  number: 80
